--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,6 @@
     <!-- Количество фильмов -->
   </section>
 </footer>
-<script defer src="../src/main.js"></script>
+<script defer src="./bundle.js"></script>
 </body>
 </html>
